--- a/pipeline/jenkins-deployment.yml
+++ b/pipeline/jenkins-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: jenkins/jenkins:lts-jdk11
+        image: jenkins/jenkins:lts
         ports:
         - containerPort: 8080
         volumeMounts:
